--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!doctype html><html lang=en-us><head><meta name=generator content="Hugo 0.144.1"><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css><title>SimpleArt Theme Demo
 </title><link rel="shortcut icon" type=image/x-icon href=/simpleart/logo.png><link rel=stylesheet href=/simpleart/css/main.c304413152df8d3dfa09972bf43bd28cf4736810e8afa177ccba810e06957ce328763194489d79d80ce2e10297d6e90ab4e38657296d35de94ebdb746d64c9f7.css integrity="sha512-wwRBMVLfjT36CZcr9DvSjPRzaBDor6F3zLqBDgaVfOModjGUSJ152Azi4QKX1ukKtOOGVyltNd6U69t0bWTJ9w=="></head><body a=auto><main class=page-content aria-label=Content><div class=w><header><h1 class=site-title><span class=site-icon aria-hidden=true><img src=logo.png alt>
-</span><span class=site-name>SimpleArt Theme Demo</span></h1><p>this is description of the website...</p></header><p>To edit this find file nostyleplease/content/_index.md</p><ul><li>info</li><ul><li>a (nearly) no-CSS, fast, minimalist Hugo theme ported from <a href=https://github.com/hanwenguo/hugo-theme-nostyleplease/>no-style-please</a>.</li><li><a href=https://github.com/time2lifes/simpleart>github repo</a></li></ul><li>all posts</li><ul><li><span>0001-01-01</span>
-<a href=/simpleart/random/>随机跳转中...请稍后</a></li></ul><li>posts by category</li><li><a href=/simpleart/index.xml>rss</a></li><li>another list</li><ul><li>with subitems</li><ul><li>with subsubitems</li><li><a href=/simpleart/about>example page</a></li></ul></ul><li>PRO TIP</li><ul><li>to edit this menu, edit data/menu.toml file</li></ul></ul><button class=random-button onclick=randomPost()>
+</span><span class=site-name>SimpleArt Theme Demo</span></h1><p>this is description of the website...</p></header><p>To edit this find file nostyleplease/content/_index.md</p><ul><li>info</li><ul><li>a (nearly) no-CSS, fast, minimalist Hugo theme ported from <a href=https://github.com/hanwenguo/hugo-theme-nostyleplease/>no-style-please</a>.</li><li><a href=https://github.com/time2lifes/simpleart>github repo</a></li></ul><li>all posts</li><ul><li><span>2024-08-18</span>
+<a href=/simpleart/posts/test-toc-and-details/>Test TOC, deatails and styles</a></li><li><span>2023-01-01</span>
+<a href=/simpleart/posts/test-markdown/>Test Markdown</a></li><li><span>2022-08-26</span>
+<a href=/simpleart/posts/test-cjk/>Test CJK</a></li><li><span>2022-08-26</span>
+<a href=/simpleart/posts/test-highlight/>Test Highlight</a></li><li><span>2022-08-26</span>
+<a href=/simpleart/posts/test-tex/>Test Tex</a></li><li><a href=/simpleart/posts>See archive...</a></li></ul><li>posts by category</li><ul><li><span>2024-08-18</span>
+<a href=/simpleart/posts/test-toc-and-details/>Test TOC, deatails and styles</a></li><li><span>2023-01-01</span>
+<a href=/simpleart/posts/test-markdown/>Test Markdown</a></li><li><span>2022-08-26</span>
+<a href=/simpleart/posts/test-cjk/>Test CJK</a></li><li><span>2022-08-26</span>
+<a href=/simpleart/posts/test-highlight/>Test Highlight</a></li><li><span>2022-08-26</span>
+<a href=/simpleart/posts/test-tex/>Test Tex</a></li><li><span>2020-07-09</span>
+<a href=/simpleart/posts/2020-07-09-post-example-with-headings-and-toc/>headings and toc</a></li><li><span>2020-07-07</span>
+<a href=/simpleart/posts/2020-07-07-overview-post/>overview</a></li><li><span>2020-07-06</span>
+<a href=/simpleart/posts/2020-07-06-strange-post/>strange post with custom js</a></li></ul><li><a href=/simpleart/index.xml>rss</a></li><li>another list</li><ul><li>with subitems</li><ul><li>with subsubitems</li><li><a href=/simpleart/about>example page</a></li></ul></ul><li>PRO TIP</li><ul><li>to edit this menu, edit data/menu.toml file</li></ul></ul><button class=random-button onclick=randomPost()>
 Wondering
 </button>
 <script>function randomPost(){window.location.href="/random"}</script><footer class=site-footer><p><a href=https://www.x.com/username><i class="fa-brands fa-twitter"></i> Twitter
